rnsc/test_data/rns_integration/error/parser/method_directive/access_flags/enum.rns
.class MethodWithEnumFlag
.super java/lang/Object

.method enum main ()V
.method_end
.class_end
